<resources>
	<string name="app_name">AutoPlex</string>
	<string name="token_label">Plex Token</string>
	<string name="token_placeholder">ABCDEF12345</string>
	<string name="setup">Setup</string>
	<string name="save">Save</string>
	<string name="settings_name">AUTOPLEX_SETTINGS</string>
	<string name="token_name">plex_token</string>
	<string name="discover_plex_server_button">Discover Plex Server</string>
	<string name="local_server_label">Local</string>
	<string name="remote_server_label">Remote</string>
	<string name="music_library_name_label">Music Library Name</string>
	<string name="music_library_id_label">Music Library ID</string>
	<string name="relay_server_label">Relay</string>
	<string name="use_label">Use</string>
	<string name="label_pause">Pause</string>
	<string name="label_play">Play</string>
	<string name="all_artists_menu_key">all</string>
	<string name="unknown_error">An unknown error has occurred.</string>
	<string name="relay_warning">Warning: Relay servers have bandwidth capped to 2mpbs. Don\'t use them unless you have to.</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="rememberme">Remember Me</string>
</resources>
