<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spuriouslabs.apps.autoplex.MainActivity" >


	<TextView
		android:id="@+id/setup_label"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/setup"
		android:textAlignment="center"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		tools:layout_constraintRight_creator="1"
		tools:layout_constraintLeft_creator="1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token_label"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/token_field"
        app:layout_constraintTop_toBottomOf="@+id/setup_label"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

	<EditText
		android:id="@+id/token_field"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:ems="10"
		android:inputType="text"
		android:selectAllOnFocus="false"
		android:text="@string/token_placeholder"
		android:textAlignment="viewEnd"
		app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
		app:layout_constraintHorizontal_bias="0.8"
		app:layout_constraintLeft_toRightOf="@+id/textView2"
		app:layout_constraintRight_toRightOf="parent"/>

	<Button
		android:id="@+id/discover_server_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="14dp"
		android:onClick="discoverPlexServers"
		android:text="@string/discover_plex_server_button"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/token_field"/>

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:labelFor="@+id/local_server_textbox"
		android:text="@string/local_server_label"
		app:layout_constraintBaseline_toBaselineOf="@+id/local_server_textbox"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginStart="16dp"/>

	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:labelFor="@+id/relay_server_textbox"
		android:text="@string/relay_server_label"
		app:layout_constraintBaseline_toBaselineOf="@+id/relay_server_textbox"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginStart="16dp"/>

	<TextView
		android:id="@+id/textView6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:labelFor="@+id/remote_server_textbox"
		android:text="@string/remote_server_label"
		app:layout_constraintBaseline_toBaselineOf="@+id/remote_server_textbox"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginStart="16dp"/>

	<EditText
		android:id="@+id/local_server_textbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="text"
		app:layout_constraintRight_toLeftOf="@+id/use_local_checkbox"
		app:layout_constraintLeft_toRightOf="@+id/textView3"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/discover_server_button"/>

	<EditText
		android:id="@+id/relay_server_textbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="text"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/local_server_textbox"
		app:layout_constraintRight_toLeftOf="@+id/use_relay_checkbox"
		app:layout_constraintLeft_toRightOf="@+id/textView5"
		/>

	<EditText
		android:id="@+id/remote_server_textbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="text"
		app:layout_constraintLeft_toRightOf="@+id/textView6"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/relay_server_textbox"
		app:layout_constraintRight_toLeftOf="@+id/use_remote_checkbox"
		app:layout_constraintHorizontal_bias="0.403"/>

	<CheckBox
		android:id="@+id/use_local_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="16dp"
		android:onClick="setPreferredServer"
		android:text="@string/use_label"
		app:layout_constraintBaseline_toBaselineOf="@+id/local_server_textbox"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginEnd="16dp"/>

	<CheckBox
		android:id="@+id/use_relay_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="15dp"
		android:onClick="setPreferredServer"
		android:text="@string/use_label"
		app:layout_constraintBaseline_toBaselineOf="@+id/relay_server_textbox"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginEnd="15dp"/>

	<CheckBox
		android:id="@+id/use_remote_checkbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="16dp"
		android:onClick="setPreferredServer"
		android:text="@string/use_label"
		app:layout_constraintBaseline_toBaselineOf="@+id/remote_server_textbox"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginEnd="16dp"/>

	<ProgressBar
		android:id="@+id/progressBar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_constraintTop_creator="1"
		tools:layout_constraintRight_creator="1"
		tools:layout_constraintBottom_creator="1"
		tools:layout_constraintLeft_creator="1"/>

	<TextView
		android:id="@+id/textView"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:labelFor="@+id/music_library_name_textbox"
		android:text="@string/music_library_name_label"
		app:layout_constraintBaseline_toBaselineOf="@+id/music_library_name_textbox"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@+id/music_library_name_textbox"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		tools:layout_constraintRight_creator="1"
		tools:layout_constraintLeft_creator="1"/>

	<EditText
		android:id="@+id/music_library_name_textbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="textPersonName"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/remote_server_textbox"
		android:layout_marginRight="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginEnd="16dp"/>

	<TextView
		android:id="@+id/textView4"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:labelFor="@+id/music_library_id_textbox"
		android:text="@string/music_library_id_label"
		app:layout_constraintBaseline_toBaselineOf="@+id/music_library_id_textbox"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toLeftOf="@+id/music_library_id_textbox"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		tools:layout_constraintRight_creator="1"
		tools:layout_constraintLeft_creator="1"/>

	<EditText
		android:id="@+id/music_library_id_textbox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:ems="10"
		android:inputType="number"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toBottomOf="@+id/music_library_name_textbox"
		android:layout_marginRight="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginEnd="16dp"/>

</android.support.constraint.ConstraintLayout>
